Add Vercel deployment configuration and remove .vercel from gitignore

--- a/env.example
+++ b/env.example
@@ -1,2 +1,17 @@
 
+# Frontend Environment Variables for Vercel Deployment
+# Copy this file to .env.local for local development
+
+# Backend API URL (will be set automatically in Vercel)
+NEXT_PUBLIC_API_URL=https://your-backend-url.vercel.app
+
+# Twilio Configuration (for SMS/OTP)
+NEXT_PUBLIC_TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
+NEXT_PUBLIC_TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+NEXT_PUBLIC_TWILIO_PHONE_NUMBER=+1234567890
+
+# App Configuration
+NEXT_PUBLIC_APP_NAME=Riqueza Electric
+NEXT_PUBLIC_APP_URL=https://your-frontend-url.vercel.app
+
 API_PREFIX=/api
