--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "@typescript-eslint/no-empty-function": "warn",
     "prefer-const": "warn",
     "no-var": "warn",
-    "no-console": "warn"
+    "no-console": "off"
   },
   "env": {
     "browser": true,
