--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,15 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-empty-function": "warn",
-    "prefer-const": "warn",
-    "no-var": "warn",
-    "no-console": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "prefer-const": "off",
+    "no-var": "off",
+    "no-console": "off",
+    "import/no-anonymous-default-export": "off"
   },
   "env": {
     "browser": true,
