--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,9 @@
     "no-console": "off",
     "import/no-anonymous-default-export": "off",
     "@next/next/no-img-element": "off",
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-sync-scripts": "off",
+    "react-hooks/exhaustive-deps": "off"
   },
   "env": {
     "browser": true,
