fix: remove hardcoded credentials and URLs, use environment variables
- Remove all hardcoded API URLs (replaced with NEXT_PUBLIC_API_URL)
- Remove hardcoded Twilio credentials (now use env variables only)
- Fix TypeScript errors in cartService, AuthProvider, OTPVerification
- Update ESLint config to show warnings without blocking builds
- Add SETUP.md and ENV_CLEANUP_SUMMARY.md documentation
- Update env.example with proper template structure

Security: No credentials are hardcoded in the codebase anymore

--- a/env.example
+++ b/env.example
@@ -1,17 +1,14 @@
-
-# Frontend Environment Variables for Vercel Deployment
+# Riqueza Electric - Frontend Environment Variables
 # Copy this file to .env.local for local development
 
-# Backend API URL (will be set automatically in Vercel)
-NEXT_PUBLIC_API_URL=https://your-backend-url.vercel.app
+# Backend API URL
+# For local development:
+NEXT_PUBLIC_API_URL=http://localhost:5000/api
 
-# Twilio Configuration (for SMS/OTP)
-NEXT_PUBLIC_TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
-NEXT_PUBLIC_TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+# For production, set this in Vercel dashboard:
+# NEXT_PUBLIC_API_URL=https://your-backend.vercel.app/api
+
+# Twilio Configuration (Optional - only if using SMS/OTP features)
+NEXT_PUBLIC_TWILIO_ACCOUNT_SID=your_twilio_account_sid
+NEXT_PUBLIC_TWILIO_AUTH_TOKEN=your_twilio_auth_token
 NEXT_PUBLIC_TWILIO_PHONE_NUMBER=+1234567890
-
-# App Configuration
-NEXT_PUBLIC_APP_NAME=Riqueza Electric
-NEXT_PUBLIC_APP_URL=https://your-frontend-url.vercel.app
-
-API_PREFIX=/api
