--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,19 +5,26 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-explicit-any": "off",
+    // TypeScript rules - warn instead of error for development
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-empty-function": "off",
-    "prefer-const": "off",
-    "no-var": "off",
-    "no-console": "off",
-    "import/no-anonymous-default-export": "off",
-    "@next/next/no-img-element": "off",
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-sync-scripts": "off",
-    "react-hooks/exhaustive-deps": "off"
+    "@typescript-eslint/no-empty-function": "warn",
+    
+    // JavaScript rules - warn instead of error
+    "prefer-const": "warn",
+    "no-var": "warn",
+    "no-console": "warn",
+    
+    // Import/Export rules
+    "import/no-anonymous-default-export": "warn",
+    
+    // Next.js rules - warn instead of error
+    "@next/next/no-img-element": "warn",
+    "react/no-unescaped-entities": "warn",
+    "@next/next/no-sync-scripts": "warn",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "env": {
     "browser": true,
